fixed some spacing on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,5 +151,10 @@ footer {
         display: flex;
         flex-direction: column;
     }
-    
+    .banner {
+        margin-bottom: 13px;
+    }
+    .card {
+        margin-bottom: 12px;
+    }
 }
